Admin panel updated4

--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -54,16 +54,7 @@
                   />
                 </div>
                 */%>
-                <div class="col-md-4 mb-3">
-                  <label for="Color">Product Color</label>
-                  <input
-                    class="jscolor form-control"
-                    type="text"
-                    placeholder="Type here"
-                    id="color product_color"
-                    name="productColor"
-                  />
-                </div>
+              
                 <div class="col-md-4 mb-3">
                   <label for="product_size" class="form-label">Quantity</label>
                   <input
@@ -104,7 +95,7 @@
                   accept="image/jpeg,image/png,image/jpg"
                   onchange="previewImage(event)"
                 />
-                <img class="preview" style="width: 300px; height: inherit" />
+                <img class="preview" style="width: 50px; height: inherit" />
                 <input
                   class="form-control"
                   type="file"
@@ -112,7 +103,7 @@
                   accept="image/jpeg,image/png,image/jpg"
                   onchange="previewImage(event)"
                 />
-                <img class="preview" style="width: 300px; height: inherit" />
+                <img class="preview" style="width: 50px; height: inherit" />
                 <input
                   class="form-control"
                   type="file"
@@ -120,7 +111,7 @@
                   accept="image/jpeg,image/png,image/jpg"
                   onchange="previewImage(event)"
                 />
-                <img class="preview" style="width: 300px; height: inherit" />
+                <img class="preview" style="width: 50px; height: inherit" />
               </div>
             </div>
           </div>
@@ -190,7 +181,7 @@
       </form>
     </div>
   </section>
-  <script defer src="https://cdn.crop.guide/loader/l.js?c=KMVWFY"></script>
+  <!-- <script defer src="https://cdn.crop.guide/loader/l.js?c=KMVWFY"></script> -->
   <script>
     function previewImage(event) {
       var input = event.target;
