--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -210,7 +210,7 @@
   </div>
 </section>
 
-<script defer src="https://cdn.crop.guide/loader/l.js?c=KMVWFY"></script>
+<!-- <script defer src="https://cdn.crop.guide/loader/l.js?c=KMVWFY"></script> -->
 
 <%-include('../partials/admin-footer.ejs')-%>
 <script>
